# felix-assessment

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py  manage.py
backend/config/: settings.py
backend/migrations/: 0001_initial.py  0002_alter_corridor_id_exchangerate_transferauditlog.py  0003_alter_transferrecord_amount_alter_transferrecord_fee_and_more.py  0004_rename_tables_add_send_money_prefix.py  0005_beneficiaryrecord.py  0006_alter_beneficiary_unique_constraint.py  0007_alter_beneficiary_unique_include_account.py  0008_transfer_beneficiary_fields.py  0009_narrow_beneficiary_unique_constraint.py
backend/proto/send_money/v1/: common.proto  transfer.proto
backend/send_money/: agent.py  apps.py
backend/send_money/adapters/agent/: agent_definition.py  guardrails.py  instructions.py  tools.py
backend/send_money/adapters/observability/: langfuse_plugin.py  otel_setup.py
backend/send_money/adapters/persistence/: audit_log_repository.py  beneficiary_repository.py  corridor_repository.py  django_models.py  exchange_rate_repository.py  transfer_repository.py  user_account_repository.py
backend/send_money/application/: ports.py
backend/send_money/domain/: auth.py  entities.py  enums.py  errors.py  repositories.py  value_objects.py
backend/send_money/infrastructure/: container.py  simulated_services.py
backend/tests/: conftest.py
docs/: architecture.md  plan_v1.md  plan_v2.md  plan_v3.md  plan_v4.md
(+26 files in other folders)
